# ChangeLog for riss

 * model enumeration with blocking clauses
 * added restart switching heuristics
 * added dynamic EMA restart schedule, and non-restart option
 * added trivial model detection (all true or all false, ignores units)

## v5.0.3

 * added (lazy) OTFSS to the solver
 * added learning biasserting clauses
 * parameter dependencies
 * parameter dependencies can be used to reduce printed help
 * can print parameters into PCS file, according to specified dependency level
 * parameters to control vivification of shared clauses
 * enables receiving equivalences before the first try to perform inprocessing